Fix: map ui on mobile

--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -3,6 +3,7 @@
   max-width: 1024px;
   padding: 0 2em;
   margin: 0 auto;
+  height: 100%;
 
   @media (max-width: 720px) {
     padding: 0 1em;
