--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -68,3 +68,9 @@
     display: none;
   }
 }
+
+.headerChartsLink {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+}
