--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -1,6 +1,7 @@
 .section {
   padding: 1em 0;
   margin: 1em 0;
+  height: 100%;
 
   @media (min-width: 720px) {
     padding: 2em 0;
